[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "block-chain"
version = "0.1.0"
description = "Block Chain implementation"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*", "app*", "constants*"]
